dhall/tests/type-inference/failure/unit/MergeHandlersWithDifferentType.txt
Type error: error: MergeHandlerTypeMismatch
 --> <current file>:1:1
  |
1 | merge { x = λ(_ : Bool) → _, y = λ(_ : Natural) → _ } (< x : Bool | y : Natural >.x True)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ MergeHandlerTypeMismatch
  |
